After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 631312 - [streamsynchronizer] Advancing segments too much
[streamsynchronizer] Advancing segments too much
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-base
git master
Other All
: Normal blocker
: 0.10.31
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2010-10-04 13:03 UTC by Thiago Sousa Santos
Modified: 2010-10-07 17:32 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
streamsynchronizer: Do not advance segments too much (1.29 KB, patch)
2010-10-04 13:03 UTC, Thiago Sousa Santos
needs-work Details | Review
File that triggers the bug (776.28 KB, video/mp4)
2010-10-04 13:27 UTC, Thiago Sousa Santos
  Details
streamsynchronizer: Do not advance segment starts beyond stop times (2.07 KB, patch)
2010-10-06 18:16 UTC, Thiago Sousa Santos
accepted-commit_now Details | Review
streamsynchronizer: Do not advance segment starts beyond stop times (2.16 KB, patch)
2010-10-07 14:24 UTC, Thiago Sousa Santos
committed Details | Review

Description Thiago Sousa Santos 2010-10-04 13:03:40 UTC
streamsynchronizer seems to advance stream too much in case one
stream finishes earlier than the others and has a defined stop
time instead of -1
Comment 1 Thiago Sousa Santos 2010-10-04 13:03:43 UTC
Created attachment 171697 [details] [review]
streamsynchronizer: Do not advance segments too much

Do not advance segments beyond their start times, avoiding
assertions.
Comment 2 Thiago Sousa Santos 2010-10-04 13:08:10 UTC
I must add here that I don't know much about streamsynchronizer, so please review this carefully :)
Comment 3 Thiago Sousa Santos 2010-10-04 13:27:49 UTC
Created attachment 171703 [details]
File that triggers the bug
Comment 4 Sebastian Dröge (slomo) 2010-10-06 07:12:57 UTC
This is not correct unfortunately. Instead of not advancing the stream if a stop position is set you have to adjust the stop position too.

If you're not advancing the stream after it's segment stop position the running times for following streams will be out of sync in gapless mode.
Comment 5 Thiago Sousa Santos 2010-10-06 18:16:41 UTC
Created attachment 171837 [details] [review]
streamsynchronizer: Do not advance segment starts beyond stop times

updated patch
Comment 6 Sebastian Dröge (slomo) 2010-10-07 06:42:44 UTC
Comment on attachment 171837 [details] [review]
streamsynchronizer: Do not advance segment starts beyond stop times

Please push this, this is correct now :)
Comment 7 Thiago Sousa Santos 2010-10-07 14:24:14 UTC
Created attachment 171895 [details] [review]
streamsynchronizer: Do not advance segment starts beyond stop times

Small fixup on last patch so that segments with stop time of -1 keep
having it -1
Comment 8 Thiago Sousa Santos 2010-10-07 17:31:52 UTC
Pushed.

commit 6d8cb1f42d4ec6f7683d2e2cf265eeabc92db0df
Author: Thiago Santos <thiago.sousa.santos@collabora.co.uk>
Date:   Mon Oct 4 10:01:19 2010 -0300